<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <item
        android:id="@+id/logo"
        app:showAsAction="always"
        android:icon="@drawable/logo"
        android:title="logo"/>
    <item android:id="@+id/sort_by_popularity"
        android:title="@string/sort_popularity"
        android:textColor="@color/colorText"
        app:showAsAction="always"/>

    <item android:id="@+id/sort_by_top"
        android:title="@string/sort_top_rated"
        android:textColor="@color/colorText"
        app:showAsAction="always"/>

    <item android:id="@+id/sort_by_upcoming"
        android:title="@string/sort_upcoming"
        android:textColor="@color/colorText"
        app:showAsAction="always"/>
    <item android:id="@+id/sort_by_favorites"
        android:title="@string/sort_by_favorites"
        app:showAsAction="always"
        android:icon="@drawable/ic_favorite_red_36dp"/>


</menu>