<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.MovieActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@color/colorBgSearch"
        android:clickable="true"
        android:iconifiedByDefault="false"

        android:queryHint="@string/search_hint"/>
    <TextView
        android:id="@+id/no_search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textFontWeight="10"
        android:textSize="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="145dp"
        android:background="@color/colorBgMovie"/>
    <TextView
        android:id="@id/movie_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-85dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textFontWeight="10"
        android:textSize="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_no_internet_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    <TextView
        android:id="@+id/tv_no_internet_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:text="@string/no_internet_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_no_internet_error_refresh"/>
    <Button
        android:id="@+id/tv_no_internet_error_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tv_no_internet_error_message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>